# wvs

./: .gitignore  config.py  main.py
backend/: config.py  main.py  pyproject.toml
backend/app/: CRUD.py  curd.py  models.py
backend/app/core/: config.py  db.py  security.py
backend/tests/core/: test_security.py
