[project]
name = "wvs-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.2",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "sqlmodel>=0.0.31",
]
